--- a/index.html
+++ b/index.html
@@ -62,19 +62,21 @@
 
 
 <section class="estudante">
-  <h2> Conheça nossos estudantes!!!</h2>
+  <h2 class="estudante-titulo"> Conheça nossos estudantes!!!</h2>
   <div>
 
     <img src="./img/ana.jpg">
-    <h3>Ana</h3>
+    <h3>Ana</h3>  56
     
 
   </div>
   <div>
 
     <img src="./img/leo.jpg">
-    <h3>Leo</h3>
-    
+    <h3>NOVASKI<h3>
+    </h3><div>
+   
+    f 
 
   </div>
 
