--- a/index.html
+++ b/index.html
@@ -63,21 +63,40 @@
 
 <section class="estudante">
   <h2 class="estudante-titulo"> Conheça nossos estudantes!!!</h2>
-  <div>
+    <div class="estudante-todos">
 
-    <img src="./img/ana.jpg">
-    <h3>Ana</h3>  56
-    
+
+
+  <div class="estudante-div">
+
+    <img class="aluno-um" src="./img/ana.jpg">
+    <h3>Luiz</h3>
+  </div>
+
+
+  <div class="estudante-div">
+
+    <img class="aluno-um" src="./img/download.jpeg">
+    <h3>Alan</h3>
+  </div>
+
+
+<div  class="estudante-div">
+
+    <img class="aluno-um" src="./img/jean.jpeg">
+    <h3>Jean</h3>
 
   </div>
-  <div>
 
-    <img src="./img/leo.jpg">
-    <h3>NOVASKI<h3>
-    </h3><div>
-   
-    f 
+  
+  <div class="estudante-div">
 
+    <img class="aluno-um" src="./img/images.jpeg">
+    <h3>Jean</h3>
+
+
+
+  </div>
   </div>
 
 </section>
@@ -86,5 +105,3 @@
 
 
 </body>
-</html>
-
