--- a/index.html
+++ b/index.html
@@ -1,107 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
+    <title>Flashcard</title>
 </head>
-
-<header class="cabecalho">
-
-
-
-     <img        class=" imagem-cabecalho"       src="./img/logo.png" alt=" logo do colegio claudino"> 
-     <h1 class="título-cabecalho">Colegio Dr Claudino dos Santos</h1>
-     <ul>
-         <li class="cabecalho-item">Aluno</li>
-         <li class="cabecalho-item">Merenda</li>
-         <li class="cabecalho-item">Horários</li>
-        
-
-     </ul>
-
-</header>
-<section class="escola">
-<h2 class="escola-titulo">Conheça um pouco do colégio</h2>
-<div class="escola-conteudo">
-
-   
-  
-</p> O Colégio Estadual Dr. Claudino dos Santos foi criado em 06 de outubro
-  de 1914. Recebeu este nome em homenagem a Claudino Dagoberto Ferreira
-  dos Santos. Dr. Claudino foi um personagem de destaque em sua época,
-  homem culto e de inteligência privilegiada. Foi bacharel em direito,
-  poeta, escritor e jornalista. Amava apresentações teatrais e literatura.
-  Foi o fundador do Colégio Estadual do Paraná. Apesar de ter nascido no
-  Recife, foi um personagem marcante na história do Paraná, exercendo
-  importantes cargos como: Secretário do interior e da justiça, secretário
-  de instrução pública, diretor do Colégio Estadual do Paraná e prefeito
-  de Curitiba. Inicialmente o Colégio funcionava no prédio, atualmente
-  tombado pelo patrimônio histórico, onde se situa a casa da cultura. No
-  entanto, com o passar dos anos, o número de alunos foi crescendo mais e
-  mais e foi necessária a construção de novas instalações.
-  O Colégio Claudino está sob direção do Professor Fernando Colodel
-  e Diretor Auxiliar Professor Gabriel Ferro, a Equipe é formada por 57
-  professores, 15 Agentes Educacionais, 01 Secretário e a Equipe
-  Pedagógica é composta por 05 Professoras Pedagogas. Visando atender a
-  comunidade escolar enfatizando a gestão democrática e contando com o
-  apoio de uma APMF atuante, além das outras instâncias Colegiadas Como
-  Conselho Escolar e Grêmio Estudantil. Atualmente o Colégio Claudino
-  conta com 983 alunos, distribuídos nos turnos da manhã, tarde e noite,
-  Dentre as modalidades de ensino ofertadas à população estão: Ensino
-  Fundamental fase II, Ensino Médio, Ensino profissionalizante e Educação
-  de Jovens e Adultos. EJA, Projetos de contra turno como Programa Mais
-  Aprendizagem, Edutech – Games e Programação e Hora treinamento. SOMOS NA
-  ATUALIDADE UM GRANDE COLÉGIO COM ENORMES DESAFIOS!!!
-</p> 
-</div>
-<img class="escola.imagem" src="./img/images.jpeg" alt="livros do colegio claudino"> 
-
-</section>
-
-
-<section class="estudante">
-  <h2 class="estudante-titulo"> Conheça nossos estudantes!!!</h2>
-    <div class="estudante-todos">
-
-
-
-  <div class="estudante-div">
-
-    <img class="aluno-um" src="./img/ana.jpg">
-    <h3>Luiz</h3>
-  </div>
-
-
-  <div class="estudante-div">
-
-    <img class="aluno-um" src="./img/download.jpeg">
-    <h3>Alan</h3>
-  </div>
-
-
-<div  class="estudante-div">
-
-    <img class="aluno-um" src="./img/jean.jpeg">
-    <h3>Jean</h3>
-
-  </div>
-
-  
-  <div class="estudante-div">
-
-    <img class="aluno-um" src="./img/images.jpeg">
-    <h3>Jean</h3>
-
-
-
-  </div>
-  </div>
-
-</section>
-
-
-
-
+<body>
+    <main>
+        <section id="container">
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        O que é JavaScript?
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        O JavaScript é uma linguagem de programação
+                    </div>
+                </div>
+            </article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        O que é CSS?
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        O CSS é uma linguagem de estilização
+                    </div>
+                </div>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
+    </footer>
 </body>
+</html>
